--- a/.github/workflows/pull_request_workflow.yml
+++ b/.github/workflows/pull_request_workflow.yml
@@ -1,5 +1,7 @@
 name: 'Pull Request'
 
+
+
 on:
   pull_request:
     branches: [ develop ]
@@ -18,6 +20,7 @@ jobs:
       - name: 📣 Send teams notification
         uses: simbo/msteams-message-card-action@latest
         with:
+          node-version: 16
           webhook: https://uic365.webhook.office.com/webhookb2/e2758c1c-477f-4de7-b1bd-c8f35fe1d105@e202cd47-7a56-4baa-99e3-e3b71a7c77dd/IncomingWebhook/ef5cd950674649228b1ae1c203a82a2a/68f631fe-fabd-412d-b045-29ece196782a
           title: ${{ github.workflow }}
           message: <strong>${{ env.develop_branch }} ${{ github.event.pull_request.title }}</strong><hr>
