--- a/.github/workflows/pull_request_workflow.yml
+++ b/.github/workflows/pull_request_workflow.yml
@@ -12,6 +12,12 @@ jobs:
   notify:
     runs-on: ubuntu-latest
     steps:
+      - name: Get Time
+        id: time
+        uses: nanzm/get-time-action@v1.1
+        with:
+          timeZone: 6
+          format: 'YYYY-MM-DD HH-mm-ss'
       - name: Get Pull Request URL
         id: pr-url
         uses: ammaratef45/pr-url-action@v1
@@ -36,6 +42,9 @@ jobs:
                 -
                   name: "Submitted by"
                   value: ${{ github.triggering_actor }}
+                -
+                  name: "Time"
+                  value: ${{ steps.time.outputs.time }}
 
 
               text:
