--- a/.github/workflows/pull_request_workflow.yml
+++ b/.github/workflows/pull_request_workflow.yml
@@ -26,19 +26,16 @@ jobs:
         with:
           webhook: https://uic365.webhook.office.com/webhookb2/e2758c1c-477f-4de7-b1bd-c8f35fe1d105@e202cd47-7a56-4baa-99e3-e3b71a7c77dd/IncomingWebhook/ef5cd950674649228b1ae1c203a82a2a/68f631fe-fabd-412d-b045-29ece196782a
           title: ${{ github.workflow }}
-          message: <strong>in ${{ github.repository }}</strong><hr>
+          message: <strong>${{ github.repository }}</strong>
           color: ff69b4
           buttons: |
             'View Pull Request' ${{ steps.pr-url.outputs.url }}
             'View Project' 'https://github.com/orgs/uic-ts/projects/1'
           sections: |
             -
-              activityTitle:
+              activityTitle: ${{ steps.time.outputs.time }}
               activitySubtitle:
               facts:
-                -
-                  name: "Submitted by"
-                  value: ${{ github.triggering_actor }}
                 -
                   name: "into"
                   value: Develop
@@ -46,8 +43,8 @@ jobs:
                   name: "from"
                   value: ${{ github.event.pull_request.title }}
                 -
-                  name: "on"
-                  value: ${{ steps.time.outputs.time }}
+                  name: "submitted by"
+                  value: ${{ github.triggering_actor }}
 
 
               text:
