--- a/.github/workflows/pull_request_workflow.yml
+++ b/.github/workflows/pull_request_workflow.yml
@@ -26,15 +26,16 @@ jobs:
         with:
           webhook: https://uic365.webhook.office.com/webhookb2/e2758c1c-477f-4de7-b1bd-c8f35fe1d105@e202cd47-7a56-4baa-99e3-e3b71a7c77dd/IncomingWebhook/ef5cd950674649228b1ae1c203a82a2a/68f631fe-fabd-412d-b045-29ece196782a
           title: ${{ github.workflow }}
-          message: <strong>${{ github.repository }}</strong>
+          message:
           color: ff69b4
           buttons: |
             'View Pull Request' ${{ steps.pr-url.outputs.url }}
             'View Project' 'https://github.com/orgs/uic-ts/projects/1'
           sections: |
             -
-              activityTitle: ${{ steps.time.outputs.time }}
+              activityTitle: ${{ github.repository }}
               activitySubtitle:
+              text:
               facts:
                 -
                   name: "into"
@@ -45,6 +46,6 @@ jobs:
                 -
                   name: "submitted by"
                   value: ${{ github.triggering_actor }}
-
-
-              text:
+                -
+                  name: "time"
+                  value: ${{ steps.time.outputs.time }}
