--- a/.github/workflows/pull_request_workflow.yml
+++ b/.github/workflows/pull_request_workflow.yml
@@ -33,6 +33,8 @@ jobs:
           sections: |
             -
               activityTitle: ${{ github.repository }}
+              activitySubtitle:
+              text: testing
               facts:
                 -
                   name: "into"
