--- a/.github/workflows/pull_request_workflow.yml
+++ b/.github/workflows/pull_request_workflow.yml
@@ -8,6 +8,7 @@ on:
 env:
   develop_branch: 'Develop <-'
   submitted_by: 'submitted by'
+  color_var: ff69b4
 jobs:
   notify:
     runs-on: ubuntu-latest
@@ -26,8 +27,8 @@ jobs:
         with:
           webhook: https://uic365.webhook.office.com/webhookb2/e2758c1c-477f-4de7-b1bd-c8f35fe1d105@e202cd47-7a56-4baa-99e3-e3b71a7c77dd/IncomingWebhook/ef5cd950674649228b1ae1c203a82a2a/68f631fe-fabd-412d-b045-29ece196782a
           title: ${{ github.workflow }}
-          message: testing
-          color: ff69b4
+          message: ${{ steps.time.outputs.time }}<hr style="color:#${{ color_var }};">
+          color: ${{ color_var }}
           buttons: |
             'View Pull Request' ${{ steps.pr-url.outputs.url }}
             'View Project' 'https://github.com/orgs/uic-ts/projects/1'
@@ -35,7 +36,6 @@ jobs:
             -
               activityTitle: ${{ github.repository }}
               activitySubtitle:
-              text:
               facts:
                 -
                   name: "into"
@@ -46,6 +46,4 @@ jobs:
                 -
                   name: "submitted by"
                   value: ${{ github.triggering_actor }}
-                -
-                  name: "time"
-                  value: ${{ steps.time.outputs.time }}
+
