--- a/.github/workflows/pull_request_workflow.yml
+++ b/.github/workflows/pull_request_workflow.yml
@@ -27,8 +27,7 @@ jobs:
         with:
           webhook: https://uic365.webhook.office.com/webhookb2/e2758c1c-477f-4de7-b1bd-c8f35fe1d105@e202cd47-7a56-4baa-99e3-e3b71a7c77dd/IncomingWebhook/ef5cd950674649228b1ae1c203a82a2a/68f631fe-fabd-412d-b045-29ece196782a
           title: ${{ github.workflow }}
-          message: ${{ github.repository }} (${{ steps.time.outputs.time }})<hr style="height:1px;color:#${{ env.color_var }};background-color:#${{ env.color_var }};">
-          color: ${{ env.color_var }}
+          message: ${{ steps.time.outputs.time }}<hr style="height:1px;color:#${{ env.color_var }};background-color:#${{ env.color_var }};">
           buttons: |
             'View Pull Request' ${{ steps.pr-url.outputs.url }}
             'View Project' 'https://github.com/orgs/uic-ts/projects/1'
@@ -38,12 +37,16 @@ jobs:
               activitySubtitle:
               facts:
                 -
-                  name: "into"
+                  name: "into:"
                   value: Develop
                 -
-                  name: "from"
+                  name: "from:"
                   value: ${{ github.event.pull_request.title }}
                 -
-                  name: "submitted by"
+                  name: "submitted by:"
                   value: ${{ github.triggering_actor }}
+                -
+                  name: "in this repo:"
+                  value: ${{ github.repository }}
+
 
