--- a/.github/workflows/pull_request_workflow.yml
+++ b/.github/workflows/pull_request_workflow.yml
@@ -17,7 +17,7 @@ jobs:
         id: time
         uses: nanzm/get-time-action@v1.1
         with:
-          timeZone: 5
+          timeZone: 6
           format: 'YYYY-MM-DD HH:mm TZD'
       - name: Get Pull Request URL
         id: pr-url
@@ -27,7 +27,7 @@ jobs:
         with:
           webhook: https://uic365.webhook.office.com/webhookb2/e2758c1c-477f-4de7-b1bd-c8f35fe1d105@e202cd47-7a56-4baa-99e3-e3b71a7c77dd/IncomingWebhook/ef5cd950674649228b1ae1c203a82a2a/68f631fe-fabd-412d-b045-29ece196782a
           title: ${{ github.workflow }}
-          message: ${{ github.event.repository.updated_at}}<hr style="height:1px;color:#${{ env.color_var }};background-color:#${{ env.color_var }};">
+          message: ${{ github.event.repository.updated_at}} | sed 's/:/./g'<hr style="height:1px;color:#${{ env.color_var }};background-color:#${{ env.color_var }};">
           buttons: |
             'View Pull Request' ${{ steps.pr-url.outputs.url }}
             'View Project' 'https://github.com/orgs/uic-ts/projects/1'
