--- a/.github/workflows/pull_request_workflow.yml
+++ b/.github/workflows/pull_request_workflow.yml
@@ -13,12 +13,6 @@ jobs:
   notify:
     runs-on: ubuntu-latest
     steps:
-      - name: Get Time
-        id: time
-        uses: nanzm/get-time-action@v1.1
-        with:
-          timeZone: 5
-          format: 'YYYY-MM-DD HH:mm '
       - name: Get Pull Request URL
         id: pr-url
         uses: ammaratef45/pr-url-action@v1
@@ -26,8 +20,9 @@ jobs:
         uses: simbo/msteams-message-card-action@latest
         with:
           webhook: https://uic365.webhook.office.com/webhookb2/e2758c1c-477f-4de7-b1bd-c8f35fe1d105@e202cd47-7a56-4baa-99e3-e3b71a7c77dd/IncomingWebhook/ef5cd950674649228b1ae1c203a82a2a/68f631fe-fabd-412d-b045-29ece196782a
+          color: ${{ env.color_var }}
           title: ${{ github.workflow }}
-          message: ${{ steps.time.outputs.time }}<hr style="height:1px;color:#${{ env.color_var }};background-color:#${{ env.color_var }};">
+          message: ${{ github.repository }}<hr style="height:1px;color:#${{ env.color_var }};background-color:#${{ env.color_var }};">
           buttons: |
             'View Pull Request' ${{ steps.pr-url.outputs.url }}
             'View Project' 'https://github.com/orgs/uic-ts/projects/1'
@@ -45,8 +40,6 @@ jobs:
                 -
                   name: "requestor"
                   value: ${{ github.triggering_actor }}
-                -
-                  name: "repo"
-                  value: ${{ github.repository }}
+
 
 
