--- a/.github/workflows/pull_request_workflow.yml
+++ b/.github/workflows/pull_request_workflow.yml
@@ -24,21 +24,21 @@ jobs:
           title: ${{ github.workflow }}
           message: ${{ github.repository }}<hr style="height:1px;color:#${{ env.color_var }};background-color:#${{ env.color_var }};">
           buttons: |
-            'View Pull Request' ${{ steps.pr-url.outputs.url }}
-            'View Project' 'https://github.com/orgs/uic-ts/projects/1'
+            View Pull Request ${{ steps.pr-url.outputs.url }}
+            View Project 'https://github.com/orgs/uic-ts/projects/1'
           sections: |
             -
               activityTitle:
               activitySubtitle:
               facts:
                 -
-                  name: "destination"
+                  name: "destination:"
                   value: Develop
                 -
-                  name: "origin"
+                  name: "origin:"
                   value: ${{ github.event.pull_request.title }}
                 -
-                  name: "requestor"
+                  name: "requestor:"
                   value: ${{ github.triggering_actor }}
 
 
