--- a/.github/workflows/feature_request_workflow.yml
+++ b/.github/workflows/feature_request_workflow.yml
@@ -11,9 +11,6 @@ jobs:
   notify:
     runs-on: ubuntu-latest
     steps:
-      - name: Get Feature Request URL
-        id: pr-url
-        uses: ammaratef45/pr-url-action@v1
       - name: 📣 Send teams notification
         uses: simbo/msteams-message-card-action@latest
         with:
@@ -22,7 +19,7 @@ jobs:
           title: ${{ github.workflow }}
           message: ${{ github.repository }}<hr style="height:1px;color:#${{ env.color_var }};background-color:#${{ env.color_var }};">
           buttons: |
-            View Pull Request ${{ steps.pr-url.outputs.url }}
+            View Feature Request $${{ github.event.issue.html_url }}
             View Project https://github.com/orgs/uic-ts/projects/1
           sections: |
             -
@@ -34,7 +31,7 @@ jobs:
                   value: Develop
                 -
                   name: "origin:"
-                  value: ${{ github.event.pull_request.title }}
+                  value: $${{ github.event.issue.title }}
                 -
                   name: "requestor:"
                   value: ${{ github.triggering_actor }}
