--- a/.github/workflows/feature_request_workflow.yml
+++ b/.github/workflows/feature_request_workflow.yml
@@ -14,4 +14,23 @@ jobs:
           webhook: https://uic365.webhook.office.com/webhookb2/e2758c1c-477f-4de7-b1bd-c8f35fe1d105@e202cd47-7a56-4baa-99e3-e3b71a7c77dd/IncomingWebhook/ef5cd950674649228b1ae1c203a82a2a/68f631fe-fabd-412d-b045-29ece196782a
           title: ${{ github.workflow }}
           message: ${{ github.repository }}<hr style="height:1px;color:#cccccc;background-color:#ffffff;">
+          buttons: |
+            View Feature Request ${{ github.event.issue.html_url }}
+            View Project https://github.com/orgs/uic-ts/projects/1
+          sections: |
+            -
+              activityTitle:
+              activitySubtitle:
+              facts:
+                -
+                  name: "destination:"
+                  value: Develop
+                -
+                  name: "origin:"
+                  value: ${{ github.event.issue.title }}
+                -
+                  name: "requestor:"
+                  value: ${{ github.triggering_actor }}
+
+
 
