--- a/.github/workflows/feature_request_workflow.yml
+++ b/.github/workflows/feature_request_workflow.yml
@@ -20,7 +20,7 @@ jobs:
           sections: |
             -
               activityTitle: "what field is this?"
-              activitySubtitle:
+              activitySubtitle: "subtitle?"
               facts:
                 -
                   name: "destination:"
