--- a/.github/workflows/feature_request_workflow.yml
+++ b/.github/workflows/feature_request_workflow.yml
@@ -20,4 +20,12 @@ jobs:
           sections: |
             -
               activityTitle: "what field is this?"
+              activitySubtitle: "subtitle?"
+              facts:
+                -
+                  name: "destination:"
+                  value: Develop
+
+
+
 
