--- a/.github/workflows/feature_request_workflow.yml
+++ b/.github/workflows/feature_request_workflow.yml
@@ -19,13 +19,10 @@ jobs:
             View Project https://github.com/orgs/uic-ts/projects/1
           sections: |
             -
-              activityTitle: "what field is this?"
-              activitySubtitle: "subtitle?"
+              activityTitle: "Title"
+              activitySubtitle: "Subtitle"
               facts:
                 -
-                  name: "Testing:"
-                  value: "testing"
-                -
                   name: "origin:"
-                  value: ${{ github.event.issue.title }}
+                  value: "$"
 
