--- a/.github/workflows/deployment_workflow.yml
+++ b/.github/workflows/deployment_workflow.yml
@@ -1,28 +1,47 @@
+name: 'Deployment status test'
+
 on:
   push:
-    branches:
-    - develop
+    branches: [ develop ]
+
+env:
+  color_var: ff69b4
 
 jobs:
-  deploy:
+  notify:
     runs-on: ubuntu-latest
     steps:
-    - name: start deployment
-      uses: bobheadxi/deployments@v1
-      id: deployment
-      with:
-        step: start
-        token: ${{ secrets.GITHUB_TOKEN }}
-        env: release
+      - name: 📣 Send teams notification
+        uses: simbo/msteams-message-card-action@latest
+        with:
+          webhook: https://uic365.webhook.office.com/webhookb2/e2758c1c-477f-4de7-b1bd-c8f35fe1d105@e202cd47-7a56-4baa-99e3-e3b71a7c77dd/IncomingWebhook/ef5cd950674649228b1ae1c203a82a2a/68f631fe-fabd-412d-b045-29ece196782a
+          color: ${{ env.color_var }}
+          title: ${{ github.workflow }}
+          message: ${{ github.repository }}<hr style="height:1px;color:#${{ env.color_var }};background-color:#${{ env.color_var }};">
+          buttons: |
+            View Build https://uic.edu/
+            View Project https://github.com/orgs/uic-ts/projects/1
+          sections: |
+            -
+              activityTitle:
+              activitySubtitle:
+              facts:
+                -
+                  name: "token:"
+                  value:  ${{ secrets.GITHUB_TOKEN }}
 
+                -
+                  name: "status:"
+                  value: ${{ job.status }}
 
-    - name: update deployment status
-      uses: bobheadxi/deployments@v1
-      if: always()
-      with:
-        webhook: https://uic365.webhook.office.com/webhookb2/e2758c1c-477f-4de7-b1bd-c8f35fe1d105@e202cd47-7a56-4baa-99e3-e3b71a7c77dd/IncomingWebhook/ef5cd950674649228b1ae1c203a82a2a/68f631fe-fabd-412d-b045-29ece196782a
-        step: finish
-        token: ${{ secrets.GITHUB_TOKEN }}
-        status: ${{ job.status }}
-        env: ${{ steps.deployment.outputs.env }}
-        deployment_id: ${{ steps.deployment.outputs.deployment_id }}
+                -
+                  name: "env:"
+                  value: ${{ steps.deployment.outputs.env }}
+
+                -
+                  name: "deployment id:"
+                  value: ${{ steps.deployment.outputs.deployment_id }}
+
+                -
+                  name: "////////"
+                  value: ${{ github.triggering_actor }}
