--- a/.github/workflows/deployment_workflow.yml
+++ b/.github/workflows/deployment_workflow.yml
@@ -19,7 +19,7 @@ jobs:
           title: ${{ github.workflow }}
           message: ${{ github.repository }}<hr style="height:1px;color:#${{ env.color_var }};background-color:#${{ env.color_var }};">
           buttons: |
-            View Build https://uic.edu/
+            View Build "https://github.com/${{github.repository}}/commit/${{github.sha}}/checks/${{github.run_id}}"
             View Project https://github.com/orgs/uic-ts/projects/1
           sections: |
             -
