--- a/.github/workflows/deployment_workflow.yml
+++ b/.github/workflows/deployment_workflow.yml
@@ -1,4 +1,4 @@
-name: 'Deployment status test'
+name: 'Build status'
 
 on:
   push:
@@ -42,17 +42,6 @@ jobs:
                 -
                   name: "github event name"
                   value: ${{ github.event_name }}
-                -
-                  name: "github event action"
-                  value: ${{ github.event.action }}
-
-                -
-                  name: "github action path"
-                  value: ${{ github.action_path }}
-
-                -
-                  name: "github action status"
-                  value: ${{ github.action_status }}
 
                 -
                   name: "env"
@@ -65,4 +54,8 @@ jobs:
                 -
                   name: "run attempt"
                   value: ${{ github.run_attempt }}
+
+                -
+                  name: "build number"
+                  value: ${{ github.run_id }}
 
