--- a/.github/workflows/deployment_workflow.yml
+++ b/.github/workflows/deployment_workflow.yml
@@ -16,11 +16,8 @@ jobs:
         with:
           webhook: https://uic365.webhook.office.com/webhookb2/e2758c1c-477f-4de7-b1bd-c8f35fe1d105@e202cd47-7a56-4baa-99e3-e3b71a7c77dd/IncomingWebhook/ef5cd950674649228b1ae1c203a82a2a/68f631fe-fabd-412d-b045-29ece196782a
           color: ${{ env.color_var }}
-          title: ${{ github.workflow }}
-          message: ${{ github.repository }}<hr style="height:1px;color:#${{ env.color_var }};background-color:#${{ env.color_var }};">
-          buttons: |
-            View Build https://github.com/${{github.repository}}/commit/${{github.sha}}/checks/${{github.run_id}}
-            View Project https://github.com/orgs/uic-ts/projects/1
+          title: ${{ github.repository }}
+          message: ${{ github.event_name }} to ${{ github.ref_name }} by ${{ github.actor }}
           sections: |
             -
               activityTitle: TITLE
@@ -31,22 +28,9 @@ jobs:
                   value: ${{ job.status }}
 
                 -
-                  name: "triggered by"
-                  value: ${{ github.actor }}
-
-                -
-                  name: "github event name"
-                  value: ${{ github.event_name }}
-
-                -
-                  name: "ref name"
-                  value: ${{ github.ref_name }}
-
-                -
                   name: "run attempt"
                   value: ${{ github.run_attempt }}
 
-                -
-                  name: "build number"
-                  value: ${{ github.run_id }}
-
+          buttons: |
+            View Build https://github.com/${{github.repository}}/commit/${{github.sha}}/checks/${{github.run_id}}
+            View Project https://github.com/orgs/uic-ts/projects/1
