--- a/.github/workflows/deployment_workflow.yml
+++ b/.github/workflows/deployment_workflow.yml
@@ -26,7 +26,7 @@ jobs:
                   value: ${{ job.status }}
 
                 -
-                  name: "run attempt"
+                  name: "attempts:"
                   value: ${{ github.run_attempt }}
 
           buttons: |
