--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -19,8 +19,8 @@ jobs:
         with:
           webhook: https://uic365.webhook.office.com/webhookb2/e2758c1c-477f-4de7-b1bd-c8f35fe1d105@e202cd47-7a56-4baa-99e3-e3b71a7c77dd/IncomingWebhook/ef5cd950674649228b1ae1c203a82a2a/68f631fe-fabd-412d-b045-29ece196782a
           color: ${{ env.color_var }}
-          title: ${{ github.workflow }} in ${{ github.repository }}
-          message: <hr style="height:1px;color:#${{ env.color_var }};background-color:#${{ env.color_var }};">
+          title: ${{ github.repository }}
+          message: ${{ github.workflow }}<hr style="height:1px;color:#${{ env.color_var }};background-color:#${{ env.color_var }};">
           buttons: |
             View Pull Request ${{ steps.pr-url.outputs.url }}
             View Project https://github.com/orgs/uic-ts/projects/1
@@ -30,12 +30,11 @@ jobs:
               activitySubtitle:
               facts:
                 -
-                  name: "destination:"
-                  value: ${{ github.base_ref }}
-
-                -
                   name: "origin:"
                   value: ${{ github.head_ref }}
+                -
+                  name: "target:"
+                  value: ${{ github.base_ref }}
                 -
                   name: "requestor:"
                   value: ${{ github.triggering_actor }}
