--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,23 +16,23 @@ jobs:
         with:
           webhook: https://uic365.webhook.office.com/webhookb2/e2758c1c-477f-4de7-b1bd-c8f35fe1d105@e202cd47-7a56-4baa-99e3-e3b71a7c77dd/IncomingWebhook/ef5cd950674649228b1ae1c203a82a2a/68f631fe-fabd-412d-b045-29ece196782a
           color: ${{ env.color_var }}
-          title: ${{ github.workflow }}":" ${{ job.status }}
-          message: ${{ github.repository }}<hr style="height:2px;margin-top:7px;color:#${{ env.color_var }};background-color:#${{ env.color_var }};">
+          title: '${{ github.workflow }}: ${{ job.status }}'
+          message: ${{ github.repository }}<hr style='height:2px;margin-top:7px;color:#${{ env.color_var }};background-color:#${{ env.color_var }};'>
           sections: |
 
             -
               facts:
 
                 -
-                  name: "branch:"
+                  name: 'branch:'
                   value: ${{ github.ref_name }}
 
                 -
-                  name: "attempts:"
+                  name: 'attempts:'
                   value: ${{ github.run_attempt }}
 
                 -
-                  name: "requestor:"
+                  name: 'requestor:'
                   value: ${{ github.actor }}
 
 
