--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -11,6 +11,11 @@ jobs:
   notify:
     runs-on: ubuntu-latest
     steps:
+      - name: Get requested reviewers
+        run: |
+          for reviewer in ${{ github.event.pull_request.requested_reviewers }}; do
+            echo "Reviewer: $reviewer"
+          done
       - name: Get Pull Request URL
         id: pr-url
         uses: ammaratef45/pr-url-action@v1
@@ -51,3 +56,6 @@ jobs:
                 -
                   name: "Commits:"
                   value: ${{ github.event.pull_request.commits }}
+                -
+                  name: "Commit messages:"
+                  value: ${{ github.event.pull_request.head_commit.message }}
