--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -14,6 +14,9 @@ jobs:
       - name: Get Pull Request URL
         id: pr-url
         uses: ammaratef45/pr-url-action@v1
+      - name: List files
+        run: |
+          ls -R
       - name: Get commit messages
         run: |
           commit_messages=""
