--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *.yml filter=lfs diff=lfs merge=lfs -text
 *.md filter=lfs diff=lfs merge=lfs -text
 *.txt filter=lfs diff=lfs merge=lfs -text
+*.xt filter=lfs diff=lfs merge=lfs -text
